# xmia

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: pr.yml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  css-modules.d.ts  main.tsx  types.ts
frontend/src/api/: account.ts  client.ts  rates.ts  symbols.ts
frontend/src/components/: AccountSummary.css  AccountSummary.tsx  DataWindow.css  DataWindow.tsx  Layout.css  Layout.tsx  PriceChart.css  PriceChart.tsx  TimeframeSelector.css  TimeframeSelector.tsx  Watchlist.css  Watchlist.tsx
frontend/tests/: App.test.tsx  setup.ts
frontend/tests/api/: client.test.ts
frontend/tests/components/: AccountSummary.test.tsx  DataWindow.test.tsx  Layout.test.tsx  PriceChart.test.tsx  TimeframeSelector.test.tsx  Watchlist.test.tsx
openspec/: config.yaml  monitoring-dashboard-design.md  monitoring-dashboard-plan.md  task-1-brief.md  task-1-report.md  task-1-review-package.diff  task-2-brief.md
openspec/changes/add-data-window/: design.md  tasks.md
src/api/: dependencies.py  errors.py  main.py  timeframes.py
src/mt5/: config.py  errors.py  fake.py  live.py  protocol.py  reconnect.py
tests/: conftest.py  test_config.py  test_contract.py  test_errors.py  test_fake.py  test_live.py  test_protocol.py  test_reconnect.py
tests/api/: conftest.py  test_account.py  test_api_errors.py  test_dependencies.py  test_main.py  test_rates.py  test_symbols.py  test_timeframes.py
(+61 files in other folders)
